fix word breaking and overflowing

--- a/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@@ -83,7 +83,7 @@
     .newsContainer {
         box-sizing: border-box;
         width: 100%;
-        word-break: break-all;
+        word-break: break-word;
         height: 193px;
         @include mut.flexed(column, start, space-between, nowrap);
         @include mut.rem-padded($top: 25px, $right: 30px, $bottom: 25px, $left: 30px);
@@ -96,6 +96,10 @@
         @media (min-width: 360px) and (max-width: 767px) {
             @include mut.rem-padded($top: 15px, $right: 15px, $bottom: 15px, $left: 15px);
             height: 300px;
+        }
+
+        .subContainer{
+            max-width: 100%;
         }
     }
 
@@ -154,7 +158,7 @@
         @include mut.rem-margined(5px, 0px, 0px, 0px);
         @include mut.rem-padded(0px, 5px, 0px, 0px);
         color: c.$lighter-black-color;
-        word-break: break-all;
+        word-break: break-word;
         @include mut.with-font(ft.$roboto-light, $font-weight: 300, $font-size: 15px);
         line-height: 18px;
         @media (min-width: 768px) and (max-width: 1024px) {
